# real-time-deepfake-speech-detection

./: .gitignore  .gitmodules  0_envsetup.sh  KDW2V-AASISTL  KDW2V-AASISTL_new  KD_ICONIP  README.md  aasist_runs  aasist_runs_datad  best_pretrained  config.py  datasets  evaluation.ipynb  logger.py  main.py  main_kd.py  pyproject.toml  test.ipynb  test.py  trainer.py  utils.py
confs/: 1s_aasist_r3_&_mul_aug_w_o_silence.yml  1s_aasist_r4_w_o_silence.yml  1s_aasist_r5_w_o_silence.yml  1s_conformer_r4_w_o_silence.yml  4s_aasist_baseline.yml  4s_conformer_baseline.yml
confs/balanced_w_train_aasist_confs/: 1s_included_silence.yml  1s_w_o_silence.yml
confs/balanced_w_train_conformer_confs/: 1s_included_silence.yml  1s_w_o_silence.yml
confs/test_on_new_set/: 1s_aasist_r3_&_mul_aug_w_o_silence.yml  1s_aasist_r4_w_o_silence.yml  1s_aasist_r5_w_o_silence.yml
confs/test_tmp/: 1s_aasist_r4_w_o_silence.yml  1s_aasist_r4_w_o_silence_re_init_3layers.yml
data/: RawBoost.py  augmentation.py  preprocess.py  test_set.py  train_set.py
kd/: RawBoost.py  export.py  main.py  menu.py  student.py  teacher.py  torchdistill_main.py  torchdistill_utils.py  utils.py
kd_configs/: 1s_aasist_aug4_w_o_silence.yml
kd_configs/ablation_study copy/: ce_only.yaml  cosine_only.yaml  dkd_only.yaml  mse_only.yaml  w_o_cosine.yml  w_o_dkd.yml  w_o_mse.yml
kd_configs/test/: 1s_my_kd_aasist_df21_1s.yml  1s_my_kd_aasist_df21_1s_4l.yml  (+5 more)
models/: __init__.py  aasist_modules.py  conformer_baseline.py  fe.py  models.py  xlsr_aasist.py
utils/: generate_dataset.py  generate_dataset_df.py
(+36 files in other folders)
